Fix where block ref counter overflows and adds unnecessary horizontal scroll in masonry side pages
As per convo on Slack:

Henry Harboe: I’m using masonry vanilla with some of my own custom CSS, and have an annoying horizontal scrolling issue with my right sidebar. Some element within the open page is wider than its parent, so I get this minimal scrolling behavior which makes repeatedly interrupts scrolling through my masonry-ed sidebar! Anyone have any any suggestions for which elements might be causing this?

--- a/masonry-main.css
+++ b/masonry-main.css
@@ -178,3 +178,7 @@ div.roam-app>div.flex-h-box>div.roam-main>div.roam-body-main {
 .rm-multibar {
     z-index: 4;
 }
+
+/* Fix where block ref counter overflows and adds unnecessary horizontal scroll in masonry side pages */
+
+div.rm-block-main {width: 99%;}
